# python-backend-interview

./: README.md  docker-compose.actions.yml  docker-compose.yml
.github/workflows/: main.yml
amitruck/: .env.example  dockerfile.ci  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
amitruck/amitruck/: asgi.py  settings.py  urls.py  wsgi.py
amitruck/api/: admin.py  models.py  serializers.py  views.py
amitruck/api/migrations/: 0001_initial.py
amitruck/api/tests/: test_views.py
